Added serialized and notebook files.

--- a/Melbourne ML/Melbourne.ipynb
+++ b/Melbourne ML/Melbourne.ipynb
@@ -564,7 +564,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see that there is one extra column representing a serial number, but is useless here when we already\n",
+    "We see that there is one extra column representing the serial numbers, but is useless here when we already\n",
     "have pandas that offers indices."
    ]
   },
