Added analysis based on 2 features
Added analysis for No. of rooms and the no. of properties, mean price per seller.

--- a/Melbourne ML/Melbourne.ipynb
+++ b/Melbourne ML/Melbourne.ipynb
@@ -314,11 +314,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 364,
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_data.rename(columns={m_data.columns.values[0]: 'Serial'}, inplace =True)"
+    "m_data.rename(columns = {m_data.columns.values[0]: 'Serial'}, inplace = True)"
    ]
   },
   {
@@ -1186,7 +1186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 365,
    "metadata": {},
    "outputs": [
     {
@@ -1301,13 +1301,13 @@
        "10     12       1 4700000.0000000"
       ]
      },
-     "execution_count": 362,
+     "execution_count": 365,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "gp_rooms = m_data.groupby('Rooms').agg({'Serial': 'count', 'Price':'mean'}).reset_index().sort_values('Price', ascending=False).head(70)\n",
+    "gp_rooms = m_data.groupby('Rooms').agg({'Serial': 'count', 'Price':'mean'}).reset_index().sort_values('Price', ascending = False).head(70)\n",
     "gp_rooms.sort_values('Price', ascending = 'False')"
    ]
   },
@@ -1357,7 +1357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe that no of houses having the give no of rooms also matter. Even when, the price is highest for the house having 12 rooms, there is only 1 house with such no of rooms. The order is: 3, 2, 4, 1, 5, 6, and effective range is [3, 7]."
+    "We observe that the no. of houses having the give no. of rooms also matter. Even when, the price is highest for the house having 12 rooms, there is only 1 house with such no of rooms. The order is: 3, 2, 4, 1, 5, 6, and effective range is [3, 7]."
    ]
   },
   {
@@ -1628,13 +1628,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 366,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# Now, we desrialize the model and use it for prediction.\n",
+    "# Now, we deserialize the model and use it for prediction.\n",
     "dt_model = joblib.load(\"./decision_tree_model.pkl\")\n",
     "\n",
     "# Below, we predict for a specific feature.\n",
